--- a/LiveDc/LiveDc.csproj
+++ b/LiveDc/LiveDc.csproj
@@ -49,6 +49,10 @@
     <Compile Include="LiveDcDrive.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilites\VistaSecurity.cs" />
+    <Compile Include="WindowsHelper.cs" />
+    <Compile Include="Windows\CopyData.cs" />
+    <Compile Include="Windows\EnumWindows.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
