--- a/LiveDc/LiveDc.csproj
+++ b/LiveDc/LiveDc.csproj
@@ -56,8 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CheckIp.cs" />
-    <Compile Include="FlyLinkHelper.cs" />
+    <Compile Include="Forms\FrmHubList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmHubList.Designer.cs">
+      <DependentUpon>FrmHubList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,19 +74,27 @@
     <Compile Include="Forms\FrmStatus.Designer.cs">
       <DependentUpon>FrmStatus.cs</DependentUpon>
     </Compile>
-    <Compile Include="IpGeoBase.cs" />
+    <Compile Include="Helpers\LiveCheckIp.cs" />
+    <Compile Include="Helpers\FlyLinkHelper.cs" />
+    <Compile Include="Helpers\IpGeoBase.cs" />
+    <Compile Include="Helpers\LiveHubs.cs" />
     <Compile Include="LiveClient.cs" />
     <Compile Include="LiveClient.Designer.cs">
       <DependentUpon>LiveClient.cs</DependentUpon>
     </Compile>
     <Compile Include="LiveDcDrive.cs" />
+    <Compile Include="NLogManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Utilites\VistaSecurity.cs" />
     <Compile Include="WindowsHelper.cs" />
     <Compile Include="Windows\CopyData.cs" />
     <Compile Include="Windows\EnumWindows.cs" />
+    <EmbeddedResource Include="Forms\FrmHubList.resx">
+      <DependentUpon>FrmHubList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmSettings.resx">
       <DependentUpon>FrmSettings.cs</DependentUpon>
     </EmbeddedResource>
@@ -111,9 +123,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\1343305520_RecordPressed.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\dokan-net-0.6.0\DokanNet\DokanNet.csproj">
       <Project>{A09B408A-26A0-4FF8-83D5-6E1B1DA5F63C}</Project>
       <Name>DokanNet</Name>
@@ -124,7 +133,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\green.ico" />
+    <None Include="Resources\livedc.ico" />
+    <None Include="Resources\livedc_offline.ico" />
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
