--- a/LiveDc/LiveDc.csproj
+++ b/LiveDc/LiveDc.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Helpers\FlyLinkHelper.cs" />
     <Compile Include="Helpers\IpGeoBase.cs" />
     <Compile Include="Helpers\LiveHubs.cs" />
+    <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="LiveClient.cs" />
     <Compile Include="LiveClient.Designer.cs">
       <DependentUpon>LiveClient.cs</DependentUpon>
