--- a/LiveDc/NLog.config
+++ b/LiveDc/NLog.config
@@ -11,7 +11,7 @@
   </targets>
 
   <targets>
-    <target name="debugger" xsi:type="Debugger" layout="${logger}::${message}"/>
+    <target name="debugger" xsi:type="Debugger" layout="${time}::${logger}::${message}"/>
   </targets>
 
   <rules>
