--- a/LiveDc/LiveDc.csproj
+++ b/LiveDc/LiveDc.csproj
@@ -66,6 +66,9 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
@@ -118,6 +121,7 @@
       <DependentUpon>LiveClient.cs</DependentUpon>
     </Compile>
     <Compile Include="LiveDcDrive.cs" />
+    <Compile Include="LiveHistoryManager.cs" />
     <Compile Include="NativeImageList.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="NLogManager.cs" />
@@ -137,7 +141,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="ShellHelper.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="TimeFormatHelper.cs" />
     <Compile Include="Utilites\VistaSecurity.cs" />
     <Compile Include="WindowsHelper.cs" />
     <Compile Include="Windows\CopyData.cs" />
@@ -193,6 +199,7 @@
     <None Include="Resources\livedc_offline.ico" />
     <Content Include="livedc.ico" />
     <None Include="Resources\settings.png" />
+    <None Include="Resources\exit1.png" />
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -224,8 +231,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == Setup "C:\Program Files (x86)\Inno Setup 5\compil32.exe" /cc "$(SolutionDir)Setup\livedc.iss"
-if $(ConfigurationName) == Setup "C:\Windows\explorer.exe" $(SolutionDir)Setup\Output</PostBuildEvent>
+    <PostBuildEvent>if $(ConfigurationName) == Setup "C:\Program Files (x86)\Inno Setup 5\compil32.exe" /cc $(SolutionDir)Setup\livedc.iss
+
+if $(ConfigurationName) == Setup start C:\Windows\explorer.exe /select, $(SolutionDir)Setup\Output</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
