--- a/LiveDc/LiveDc.csproj
+++ b/LiveDc/LiveDc.csproj
@@ -97,6 +97,18 @@
     <Compile Include="Forms\FrmHubList.Designer.cs">
       <DependentUpon>FrmHubList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmMain.Designer.cs">
+      <DependentUpon>FrmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FrmSearch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmSearch.Designer.cs">
+      <DependentUpon>FrmSearch.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,21 +121,22 @@
     <Compile Include="Forms\FrmStatus.Designer.cs">
       <DependentUpon>FrmStatus.cs</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\LiveCheckIp.cs" />
     <Compile Include="Helpers\FlyLinkHelper.cs" />
     <Compile Include="Helpers\IpGeoBase.cs" />
-    <Compile Include="Helpers\LiveHubsApi.cs" />
+    <Compile Include="Helpers\LiveApi.cs" />
+    <Compile Include="Helpers\ShellHelper.cs" />
     <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="Helpers\StrongDcHelper.cs" />
-    <Compile Include="HubManager.cs" />
+    <Compile Include="Helpers\TimeFormatHelper.cs" />
+    <Compile Include="Helpers\WindowsHelper.cs" />
+    <Compile Include="Managers\AutoUpdateManager.cs" />
+    <Compile Include="Managers\HubManager.cs" />
     <Compile Include="LiveClient.cs" />
     <Compile Include="LiveClient.Designer.cs">
       <DependentUpon>LiveClient.cs</DependentUpon>
     </Compile>
     <Compile Include="LiveDcDrive.cs" />
-    <Compile Include="LiveHistoryManager.cs" />
-    <Compile Include="NativeImageList.cs" />
-    <Compile Include="NativeMethods.cs" />
+    <Compile Include="Managers\LiveHistoryManager.cs" />
     <Compile Include="NLogManager.cs" />
     <Compile Include="Notify\Compatibility.cs" />
     <Compile Include="Notify\DcFileControl.cs">
@@ -141,15 +154,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="ShellHelper.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="TimeFormatHelper.cs" />
+    <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="Utilites\VistaSecurity.cs" />
-    <Compile Include="WindowsHelper.cs" />
     <Compile Include="Windows\CopyData.cs" />
     <Compile Include="Windows\EnumWindows.cs" />
+    <Compile Include="Windows\NativeImageList.cs" />
+    <Compile Include="Windows\NativeMethods.cs" />
     <EmbeddedResource Include="Forms\FrmHubList.resx">
       <DependentUpon>FrmHubList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmSearch.resx">
+      <DependentUpon>FrmSearch.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmSettings.resx">
       <DependentUpon>FrmSettings.cs</DependentUpon>
@@ -200,6 +215,8 @@
     <Content Include="livedc.ico" />
     <None Include="Resources\settings.png" />
     <None Include="Resources\exit1.png" />
+    <None Include="Resources\search.png" />
+    <None Include="Resources\livedc_action.ico" />
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
