- auto update iss file on deploy

--- a/InnoSetupVersionUpdate/InnoSetupVersionUpdate.csproj
+++ b/InnoSetupVersionUpdate/InnoSetupVersionUpdate.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>28ad48da-5066-47ab-86f0-fe1b48492fb8</ProjectGuid>
+    <ProjectGuid>{BF9762B5-542F-46BB-B344-C464C8C2809B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>InnoSetupVersionUpdate</RootNamespace>
@@ -48,6 +48,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetPath) $(SolutionDir)\LiveDC\bin</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
