--- a/LiveDc/NLog.config
+++ b/LiveDc/NLog.config
@@ -12,12 +12,14 @@
 
   <targets>
     <target name="debugger" xsi:type="Debugger" layout="${time}::${logger}::${message}"/>
+    <target name ="file" xsi:type="File" layout="${time}::${logger}::${message}" fileName="${tempdir}/livedc-${shortdate}.log"/>
   </targets>
 
   <rules>
     <!--<logger name="*" minlevel="Trace" writeTo="logfile" />-->
     <!--<logger name="*" minlevel="Warn" writeTo="logfile" />-->
     <logger name="*" minlevel="Info" writeTo="debugger" />
+    <logger name="*" minlevel="Info" writeTo="file" />
     <!--<logger name="*" minlevel="Debug" writeTo="logfile" />-->
   </rules>
 </nlog>
