- [1.0.5] fixed hub bootstap

--- a/LiveDc/NLog.config
+++ b/LiveDc/NLog.config
@@ -19,7 +19,7 @@
     <!--<logger name="*" minlevel="Trace" writeTo="logfile" />-->
     <!--<logger name="*" minlevel="Warn" writeTo="logfile" />-->
     <logger name="*" minlevel="Info" writeTo="debugger" />
-    <logger name="*" minlevel="Info" writeTo="file" />
+    <logger name="*" minlevel="Debug" writeTo="file" />
     <!--<logger name="*" minlevel="Debug" writeTo="logfile" />-->
   </rules>
 </nlog>
