--- a/LiveDc/LiveDc.csproj
+++ b/LiveDc/LiveDc.csproj
@@ -222,11 +222,11 @@
       <Project>{A09B408A-26A0-4FF8-83D5-6E1B1DA5F63C}</Project>
       <Name>DokanNet</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\monotorrent-master\src\MonoTorrent.Dht\MonoTorrent.Dht.csproj">
+    <ProjectReference Include="..\..\monotorrent\src\MonoTorrent.Dht\MonoTorrent.Dht.csproj">
       <Project>{7a2a7e73-fd43-4171-aa34-da413d35459e}</Project>
       <Name>MonoTorrent.Dht</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\monotorrent-master\src\MonoTorrent\MonoTorrent.csproj">
+    <ProjectReference Include="..\..\monotorrent\src\MonoTorrent\MonoTorrent.csproj">
       <Project>{411a9e0e-fdc6-4e25-828a-0c2cd1cd96f8}</Project>
       <Name>MonoTorrent</Name>
     </ProjectReference>
