--- a/LiveDc/LiveDc.csproj
+++ b/LiveDc/LiveDc.csproj
@@ -109,6 +109,9 @@
     <Compile Include="Forms\SegementsControl.Designer.cs">
       <DependentUpon>SegementsControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\CollapsibleSplitter.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Helpers\DcSharaApi.cs" />
     <Compile Include="Providers\DcStartItem.cs" />
     <Compile Include="Forms\FrmHubList.cs">
@@ -294,9 +297,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == Setup $(ProjectDir)bin\InnoSetupVersionUpdate.exe $(SolutionDir)Setup\livedc.iss $(TargetPath)
-
-if $(ConfigurationName) == Setup "C:\Program Files (x86)\Inno Setup 5\compil32.exe" /cc $(SolutionDir)Setup\livedc.iss
+    <PostBuildEvent>if $(ConfigurationName) == Setup $(ProjectDir)bin\InnoSetupManager.exe $(SolutionDir)Setup $(TargetPath)
 
 if $(ConfigurationName) == Setup start C:\Windows\explorer.exe /select, $(SolutionDir)Setup\Output</PostBuildEvent>
   </PropertyGroup>
