--- a/LiveDc/LiveDc.csproj
+++ b/LiveDc/LiveDc.csproj
@@ -70,6 +70,10 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DokanNet, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\dokan-net-0.6.0\DokanNet\bin\x86\Release\DokanNet.dll</HintPath>
+    </Reference>
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
     </Reference>
@@ -91,6 +95,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\FrmAttachUrl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmAttachUrl.Designer.cs">
+      <DependentUpon>FrmAttachUrl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmDownloadDebug.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,12 +129,6 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Helpers\DcSharaApi.cs" />
-    <Compile Include="Notify\FrmAttachUrl.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Notify\FrmAttachUrl.Designer.cs">
-      <DependentUpon>FrmAttachUrl.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -213,6 +217,9 @@
     <Compile Include="Windows\EnumWindows.cs" />
     <Compile Include="Windows\NativeImageList.cs" />
     <Compile Include="Windows\NativeMethods.cs" />
+    <EmbeddedResource Include="Forms\FrmAttachUrl.resx">
+      <DependentUpon>FrmAttachUrl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmDownloadDebug.resx">
       <DependentUpon>FrmDownloadDebug.cs</DependentUpon>
     </EmbeddedResource>
@@ -237,9 +244,6 @@
     <EmbeddedResource Include="Forms\SegementsControl.resx">
       <DependentUpon>SegementsControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Notify\FrmAttachUrl.resx">
-      <DependentUpon>FrmAttachUrl.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Notify\FrmNotify.resx">
       <DependentUpon>FrmNotify.cs</DependentUpon>
     </EmbeddedResource>
@@ -263,10 +267,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\dokan-net-0.6.0\DokanNet\DokanNet.csproj">
-      <Project>{A09B408A-26A0-4FF8-83D5-6E1B1DA5F63C}</Project>
-      <Name>DokanNet</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\monotorrent\src\MonoTorrent.Dht\MonoTorrent.Dht.csproj">
       <Project>{7a2a7e73-fd43-4171-aa34-da413d35459e}</Project>
       <Name>MonoTorrent.Dht</Name>
